--- a/anime.html
+++ b/anime.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Project 2 - My Favorite Anime</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leonel Garcia - Favorite Anime</title>
+  <style>
+    /* Same styles as in index.html */
+    html, body {
+      font-family: 'Comic Sans MS', sans-serif;
+      background-color: #1e88e5;
+      margin: 0;
+      padding: 0;
+      color: #ffffff;
+    }
 
+    header {
+      background-color: #3949ab;
+      padding: 10px 0;
+      text-align: center;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li {
+      display: inline;
+      margin: 0 15px;
+    }
+
+    nav ul li a {
+      color: #bbdefb;
+      text-decoration: none;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    section {
+      margin-bottom: 20px;
+    }
+
+    h1, h2 {
+      color: #ffffff;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    footer {
+      background-color: #3949ab;
+      padding: 10px;
+      text-align: center;
+      color: #ffffff;
+    }
+
+    footer p {
+      margin: 0;
+    }
+  </style>
+</head>
 <body>
   <header>
     <nav>
@@ -20,36 +84,30 @@
   <main>
     <section>
       <h1>My Favorite Anime</h1>
-      <p>I first started watching anime during Covid-19, and ever since that time, I've watched more than 30 anime series. Here are my top 3 favorites.</p>
+      <p>I first started watching anime during Covid-19, and since then, I've watched over 30 series. Here are my top 3 favorites:</p>
     </section>
 
     <section>
-      <h2>#3 Naruto</h2>
-      <div>
-        <img src="images/naruto.jpg" alt="Naruto series logo">
-        <p>Naruto is one of my favorite anime that I've watched, and it's in my third spot because I enjoy watching every fight that appeared and the story it told. It also led me to find many similar animes that I now enjoy watching.</p>
-      </div>
+      <h2>#3: Naruto</h2>
+      <img src="images/naruto.jpg" alt="Naruto series logo">
+      <p>Naruto captivated me with its story and fight scenes, making it my third favorite.</p>
     </section>
 
     <section>
-      <h2>#2 Bleach</h2>
-      <div>
-        <img src="images/bleach.jpg" alt="Bleach series logo">
-        <p>Bleach is an anime that has a very interesting story that I enjoy since it's pretty much sword fighting. That is why it's on my second spot for my list; the fights and animation for Bleach are something I enjoy watching.</p>
-      </div>
+      <h2>#2: Bleach</h2>
+      <img src="images/bleach.jpg" alt="Bleach series logo">
+      <p>Bleach is my second favorite because of its engaging sword-fighting action and beautiful animation.</p>
     </section>
 
     <section>
-      <h2>#1 Yu-Gi-Oh</h2>
-      <div>
-        <img src="images/yugioh.jpg" alt="Yu-Gi-Oh series logo">
-        <p>On my number one spot, I choose Yu-Gi-Oh since I started to watch and play it when I was in 4th grade. Ever since I started to watch Yu-Gi-Oh, I never forgot about it, and I still buy packs to play with the cards. Even to this day, I still have over 100 cards in my room as a precious memory that I will always keep.</p>
-      </div>
+      <h2>#1: Yu-Gi-Oh</h2>
+      <img src="images/yugioh.jpg" alt="Yu-Gi-Oh series logo">
+      <p>Yu-Gi-Oh is my top favorite because it introduced me to the world of trading card games, a passion that has stayed with me.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2024 Leonel Garcia</p>
+    <p>&copy; 2024 Leonel Garcia. All rights reserved.</p>
   </footer>
 </body>
 </html>
