--- a/index.html
+++ b/index.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Project 2</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leonel Garcia - Introduction</title>
+  <style>
+    html, body {
+      font-family: 'Comic Sans MS', sans-serif;
+      background-color: #1e88e5;
+      margin: 0;
+      padding: 0;
+      color: #ffffff;
+    }
 
+    header {
+      background-color: #3949ab;
+      padding: 10px 0;
+      text-align: center;
+    }
+
+    nav ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li {
+      display: inline;
+      margin: 0 15px;
+    }
+
+    nav ul li a {
+      color: #bbdefb;
+      text-decoration: none;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    section {
+      margin-bottom: 20px;
+    }
+
+    h1, h2 {
+      color: #ffffff;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    footer {
+      background-color: #3949ab;
+      padding: 10px;
+      text-align: center;
+      color: #ffffff;
+    }
+
+    footer p {
+      margin: 0;
+    }
+  </style>
+</head>
 <body>
   <header>
     <nav>
@@ -20,48 +83,41 @@
   <main>
     <section>
       <h1>Introduction</h1>
-      <div>
-        <p>Hello, my name is Leonel Garcia, and welcome to my first-ever webpage.</p>
-      </div>
+      <p>Hello, my name is Leonel Garcia, and welcome to my first-ever webpage.</p>
     </section>
 
     <section>
-      <h3>About Myself</h3>
-      <div>
-        <img src="images/chicago.jpg" alt="Skyline of Chicago city">
-        <ul>
-          <li>I was born in Chicago but come from a Mexican background.</li>
-          <li>I am the middle child, with an older brother and a younger sister.</li>
-          <li>Both of my parents are from Mexico.</li>
-          <li>I enjoy spending time with my family whenever I can.</li>
-        </ul>
-      </div>
-    </section>
-
-    <section>
-      <h3>Hobbies</h3>
-      <div>
-        <img src="images/games.jpg" alt="Image of a video Game Controller">
-        <ul>
-          <li>I love playing video games since I was a kid; I always enjoyed playing games.</li>
-          <li>I also enjoy watching anime, especially those in the isekai category.</li>
-          <li>When I’m not gaming or watching anime, I usually like to read manga.</li>
-        </ul>
-      </div>
-    </section>
-
-    <section>
-      <h3>Education</h3>
+      <h2>About Myself</h2>
+      <img src="images/chicago.jpg" alt="Skyline of Chicago city">
       <ul>
-        <li>I'm a 2nd-year undergraduate student in Information Technology & Management.</li>
-        <li>I graduated from ITW David Speer Academy.</li>
-        <li>In the future, I hope to earn my ITM degree and use it to help people in the world of technology by working as an IT professional.</li>
+        <li>I was born in Chicago but come from a Mexican background.</li>
+        <li>I am the middle child, with an older brother and a younger sister.</li>
+        <li>I enjoy spending time with my family whenever I can.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Hobbies</h2>
+      <img src="images/games.jpg" alt="Video game controller">
+      <ul>
+        <li>I love playing video games, ever since I was a kid with a Gameboy.</li>
+        <li>I enjoy watching anime, especially those in the isekai category.</li>
+        <li>When I’m not gaming or watching anime, I like to read manga.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Education</h2>
+      <ul>
+        <li>2nd-year undergraduate student in Information Technology & Management.</li>
+        <li>Graduated from ITW David Speer Academy.</li>
+        <li>Aspiring to help people in the world of technology as an IT professional.</li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2024 Leonel Garcia</p>
+    <p>&copy; 2024 Leonel Garcia. All rights reserved.</p>
   </footer>
 </body>
 </html>
