--- a/anime.html
+++ b/anime.html
@@ -81,33 +81,41 @@
     </nav>
   </header>
 
-  <main>
+   <main>
     <section>
       <h1>My Favorite Anime</h1>
-      <p>I first started watching anime during Covid-19, and since then, I've watched over 30 series. Here are my top 3 favorites:</p>
+
+      <p>I first started watching anime during Covid-19, and ever since that time, I've watched more than 30 anime series. Here are my top 3 favorites.</p>
     </section>
 
     <section>
-      <h2>#3: Naruto</h2>
-      <img src="images/naruto.jpg" alt="Naruto series logo">
-      <p>Naruto captivated me with its story and fight scenes, making it my third favorite.</p>
+      <h2>#3</h2>
+      <div>
+        <img src="images/naruto.jpg" alt="Naruto series logo">
+      <p>Naruto is one of my favorite anime that ive watched and its on my thrid spot because</p>
+	  <p>I enjoy watching every fight that appeard and also the story it told.</p>
+	  <p>Its also lead me to find many similar animes that i know enjoy watching.</p>
+      </div>
     </section>
-
+    
     <section>
-      <h2>#2: Bleach</h2>
-      <img src="images/bleach.jpg" alt="Bleach series logo">
-      <p>Bleach is my second favorite because of its engaging sword-fighting action and beautiful animation.</p>
+      <h2>#2</h2>
+      <div>
+        <img src="images/bleach.jpg" alt="Bleach series logo">
+      <p>Bleach is an anime that has a very interesting story that i enjoy since its pretty much sword fighting</p> 
+	  <p>That is why its on my second spot for my list since the fights and animation for bleach is something that ive enjoy watching.</p>
+      </div>
     </section>
-
+    
     <section>
-      <h2>#1: Yu-Gi-Oh</h2>
-      <img src="images/yugioh.jpg" alt="Yu-Gi-Oh series logo">
-      <p>Yu-Gi-Oh is my top favorite because it introduced me to the world of trading card games, a passion that has stayed with me.</p>
+      <h3>#1</h3>
+      <div>
+        <img src="images/yugioh.jpg" alt="Yu-Gi-Oh series logo" >
+      <p>On my number one spot i choose yugioh since i pretty much started to watch and play yugioh when i was in 4th grade</p>
+	  <p>Ever since i started to watch yugioh i never forgot about it and i still buy packs in order to play with the cards </p> 
+	  <p>even to this day i still have over 100 cards in my room as a precious memory that i will always keep and my favorite series is yugioh 5ds</P> 
+      </div>
     </section>
   </main>
-
-  <footer>
-    <p>&copy; 2024 Leonel Garcia. All rights reserved.</p>
-  </footer>
 </body>
 </html>
