--- a/anime.html
+++ b/anime.html
@@ -1,74 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leonel Garcia - Favorite Anime</title>
-  <style>
-    /* Same styles as in index.html */
-    html, body {
-      font-family: 'Comic Sans MS', sans-serif;
-      background-color: #1e88e5;
-      margin: 0;
-      padding: 0;
-      color: #ffffff;
-    }
-
-    header {
-      background-color: #3949ab;
-      padding: 10px 0;
-      text-align: center;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      display: inline;
-      margin: 0 15px;
-    }
-
-    nav ul li a {
-      color: #bbdefb;
-      text-decoration: none;
-    }
-
-    nav ul li a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 20px;
-    }
-
-    section {
-      margin-bottom: 20px;
-    }
-
-    h1, h2 {
-      color: #ffffff;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-
-    footer {
-      background-color: #3949ab;
-      padding: 10px;
-      text-align: center;
-      color: #ffffff;
-    }
-
-    footer p {
-      margin: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -81,41 +17,33 @@
     </nav>
   </header>
 
-   <main>
+  <main>
     <section>
       <h1>My Favorite Anime</h1>
-
-      <p>I first started watching anime during Covid-19, and ever since that time, I've watched more than 30 anime series. Here are my top 3 favorites.</p>
+      <p>I first started watching anime during Covid-19, and since then, I’ve watched over 30 series. Here are my top 3 favorites.</p>
     </section>
 
     <section>
-      <h2>#3</h2>
-      <div>
-        <img src="images/naruto.jpg" alt="Naruto series logo">
-      <p>Naruto is one of my favorite anime that ive watched and its on my thrid spot because</p>
-	  <p>I enjoy watching every fight that appeard and also the story it told.</p>
-	  <p>Its also lead me to find many similar animes that i know enjoy watching.</p>
-      </div>
+      <h2>#3 Naruto</h2>
+      <img src="images/naruto.jpg" alt="Naruto series logo">
+      <p>Naruto ranks third on my list for its intense fights and the inspiring story. It introduced me to many other anime.</p>
     </section>
-    
+
     <section>
-      <h2>#2</h2>
-      <div>
-        <img src="images/bleach.jpg" alt="Bleach series logo">
-      <p>Bleach is an anime that has a very interesting story that i enjoy since its pretty much sword fighting</p> 
-	  <p>That is why its on my second spot for my list since the fights and animation for bleach is something that ive enjoy watching.</p>
-      </div>
+      <h2>#2 Bleach</h2>
+      <img src="images/bleach.jpg" alt="Bleach series logo">
+      <p>Bleach is second, with thrilling sword fights and animation that keep me engaged every time I watch it.</p>
     </section>
-    
+
     <section>
-      <h3>#1</h3>
-      <div>
-        <img src="images/yugioh.jpg" alt="Yu-Gi-Oh series logo" >
-      <p>On my number one spot i choose yugioh since i pretty much started to watch and play yugioh when i was in 4th grade</p>
-	  <p>Ever since i started to watch yugioh i never forgot about it and i still buy packs in order to play with the cards </p> 
-	  <p>even to this day i still have over 100 cards in my room as a precious memory that i will always keep and my favorite series is yugioh 5ds</P> 
-      </div>
+      <h2>#1 Yu-Gi-Oh!</h2>
+      <img src="images/yugioh.jpg" alt="Yu-Gi-Oh series logo">
+      <p>Yu-Gi-Oh! is my all-time favorite because it’s been with me since fourth grade. I still collect cards, with over 100 displayed in my room.</p>
     </section>
   </main>
+
+  <footer>
+    <p>&copy; 2024 Leonel Garcia. All rights reserved.</p>
+  </footer>
 </body>
 </html>
