--- a/resume.html
+++ b/resume.html
@@ -1,74 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leonel Garcia - Resume</title>
-  <style>
-    /* Same styles as in index.html */
-    html, body {
-      font-family: 'Comic Sans MS', sans-serif;
-      background-color: #1e88e5;
-      margin: 0;
-      padding: 0;
-      color: #ffffff;
-    }
-
-    header {
-      background-color: #3949ab;
-      padding: 10px 0;
-      text-align: center;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      display: inline;
-      margin: 0 15px;
-    }
-
-    nav ul li a {
-      color: #bbdefb;
-      text-decoration: none;
-    }
-
-    nav ul li a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 20px;
-    }
-
-    section {
-      margin-bottom: 20px;
-    }
-
-    h1, h2 {
-      color: #ffffff;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-
-    footer {
-      background-color: #3949ab;
-      padding: 10px;
-      text-align: center;
-      color: #ffffff;
-    }
-
-    footer p {
-      margin: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -87,7 +23,6 @@
       <h2>Leonel Garcia</h2>
       <p>Email: lgarcia33@hawk.iit.edu | Phone: (872) 810-5123</p>
     </section>
-
     <section>
       <h2>Education</h2>
       <ul>
@@ -95,7 +30,6 @@
         <li>ITW David Speer Academy, Graduated in 2023 (GPA: 3.9/4.0)</li>
       </ul>
     </section>
-
     <section>
       <h2>Skills</h2>
       <ul>
@@ -105,7 +39,6 @@
         <li>Basic coding experience in Java and Python</li>
       </ul>
     </section>
-
     <section>
       <h2>Work Experience</h2>
       <ul>
