--- a/index.html
+++ b/index.html
@@ -1,73 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leonel Garcia - Introduction</title>
-  <style>
-    html, body {
-      font-family: 'Comic Sans MS', sans-serif;
-      background-color: #1e88e5;
-      margin: 0;
-      padding: 0;
-      color: #ffffff;
-    }
-
-    header {
-      background-color: #3949ab;
-      padding: 10px 0;
-      text-align: center;
-    }
-
-    nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li {
-      display: inline;
-      margin: 0 15px;
-    }
-
-    nav ul li a {
-      color: #bbdefb;
-      text-decoration: none;
-    }
-
-    nav ul li a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 20px;
-    }
-
-    section {
-      margin-bottom: 20px;
-    }
-
-    h1, h2 {
-      color: #ffffff;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 10px;
-    }
-
-    footer {
-      background-color: #3949ab;
-      padding: 10px;
-      text-align: center;
-      color: #ffffff;
-    }
-
-    footer p {
-      margin: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
   <header>
