--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leonel Garcia - Introduction</title>
-  <link rel="stylesheet" href="styles.css"> 
+  <meta charset="utf-8">  
+  <title>Project 2</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <header>
     <nav>
